# game-wgpu

./: Cargo.toml  README.md
src/: atlas.rs  block.rs  camera.rs  lib.rs  main.rs  shader.wgsl  terrain.rs
src/player/: collision.rs  controller.rs  mod.rs
src/renderer/: camera.rs  mesher.rs  mod.rs  shader.wgsl  texture.rs  vertex.rs  vertexer.rs
src/terrain/: instance.rs  mesher.rs  mod.rs  vertex.rs
