[package]
name = "game-wgpu"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.10"
env_logger = "0.11.0"
log = "0.4"
wgpu = "0.19.0"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
noise = "0.8.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
